--- a/lr_ppo/config/training_params.yaml
+++ b/lr_ppo/config/training_params.yaml
@@ -1,17 +1,19 @@
+# training_params.yaml - UPDATED
 # PPO Hyperparameters
-learning_rate: 0.0003
+learning_rate: 0.0001  # Reduced from 0.0003
 gamma: 0.99
 gae_lambda: 0.95
 ppo_epochs: 10
 batch_size: 64
 clip_epsilon: 0.2
 value_coef: 0.5
-entropy_coef: 0.01
+entropy_coef: 0.02  # Increased slightly for more exploration
 
 # Training Parameters
 max_episodes: 1000
 buffer_size: 2048
-max_episode_steps: 1000
+max_episode_steps: 500  # Reduced from 1000
+update_frequency: 100  # Update every 100 steps or end of episode
 
 # Environment Parameters
 goal_x: 5.0
@@ -21,3 +23,7 @@ collision_distance: 0.15
 
 # Network Architecture
 hidden_sizes: [256, 128, 64]
+
+# TurtleBot3 Velocity Limits
+max_linear_vel: 0.22
+max_angular_vel: 2.84
